Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -137,11 +137,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now i'm a markdown cell which means I"
+   ]
   },
   {
    "cell_type": "markdown",
