--- a/index.ipynb
+++ b/index.ipynb
@@ -141,7 +141,8 @@
    "metadata": {},
    "source": [
     "Now i'm a markdown cell which means I can ~type~ *words* \n",
-    "Does <i>HTML</> work"
+    "Does <i>HTML</> work?\n",
+    "    "
    ]
   },
   {
