--- a/index.ipynb
+++ b/index.ipynb
@@ -141,7 +141,7 @@
    "metadata": {},
    "source": [
     "Now i'm a markdown cell which means I can ~type~ *words* \n",
-    "Does <i>HTML</> work?\n",
+    "Does <i>H TML<i/> work?\n",
     "    "
    ]
   },
