Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -140,8 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now i'm a markdown cell which means I can ~type~ *words* \n",
-    "Does <i> HTML</i> work?\n",
+    "Now i'm a markdown cell which means I can ~type~ **words**\n",
     "    "
    ]
   },
